@@ -1,5 +1,7 @@
 2003/06/28 03:16 pcg
 
+	* GType.xs: remove superfluous gperl_object_new call.
+
         * GObject.xs: important bugfix: the calls with own==FALSE in
         GType.xs caused premature death of the perl wrapper. The fix is
         incurs a slight performance hit, so only do it when own==TRUE, as
